--- a/formpad/templates/textarea.html
+++ b/formpad/templates/textarea.html
@@ -1,2 +1,5 @@
-    <label for="{{ name }}">{{ label }}</label>
-    <textarea name="{{ name }}" placeholder="{{ placeholder }}">{{ value }}</textarea>
+<div>
+    <label for="{{ id }}">{{ label }}</label>
+    <p>{{ description }}</p>
+    <textarea name="{{ id }}" placeholder="{{ placeholder }}" value="{{ value }}"></textarea>
+</div>
