--- a/web/src/index.css
+++ b/web/src/index.css
@@ -21,20 +21,28 @@ form {
   @apply flex flex-col space-y-6
 }
 
+form p {
+  @apply text-[#B5BECC] font-normal
+}
+
+form div {
+  @apply flex flex-col space-y-2
+}
+
 label {
   @apply text-[#56C5AD] font-medium
 }
 
 input[type='text'], input[type='email'], textarea{
-  @apply bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
+  @apply w-full bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
 }
 
 input[type='date']{
-  @apply bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
+  @apply w-full bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
 }
 
 select{
-  @apply bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
+  @apply w-full bg-transparent border-2 border-[#B5BECC] rounded-md text-[#FEFEFE] placeholder-[#B5BECC]
 }
 
 input::-webkit-calendar-picker-indicator {
